@@ -4,11 +4,3 @@ A simple Restaurant APP demo with account registration, account log in and order
 You can register a new account to navigate through the application. 
 
 ![Screenshot](RestaurantScreenshot.PNG)
-
-## Install
-If the Program does not work please download "javafx-sdk-11.0" and add all the jar-files in
-`Javafx-sdk-11.0.2\lib\` to the global library.
-
-VM options:
-`--module-path %java path% --add-modules javafx.controls,javafx.fxml`
-![Screenshot](src/org/uwl/cs/resources/media/fix_vm_options.png)
